<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VTrack</string>
    <string name="action_contact">Contact</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Retype password</string>

    <!-- Activity titles -->
    <string name="activity_login_title">Log in</string>
    <string name="activity_signup_title">Sign up</string>
    <string name="activity_signup_backToLogin">Back to Sign in</string>

    <string name="activity_newVoucher_title">New Voucher</string>
    <string name="activity_voucherDetails_title">Details</string>
    <string name="activity_settings_title">Settings</string>

    <string name="activity_login_button_login">Sign in</string>
    <string name="activity_login_button_register">Register</string>
    <string name="activity_login_button_signup">Sign up</string>

    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exists">This user already exists</string>

    <string name="error_date_lies_before">This date cannot lie before the date of receipt</string>

    <string name="activity_main_actionbaritem_received">Received</string>
    <string name="activity_main_actionbaritem_givenTo">Given to</string>
    <string name="activity_main_actionbaritem_givenAway">Given away</string>
    <string name="activity_main_actionbaritem_archive">Archive</string>

    <string name="activity_detail_voucher_textview_name">Name</string>
    <string name="activity_detail_voucher_textview_defaultHint">-</string>
    <string name="activity_detail_voucher_textview_receivedAt">Received at</string>
    <string name="activity_detail_voucher_textview_deliveredAt">Deliverd at</string>
    <string name="activity_detail_voucher_textview_validUntil">Valid until</string>
    <string name="activity_detail_voucher_textview_receivedFrom">Received from</string>
    <string name="activity_detail_voucher_textview_givenTo">Given to</string>
    <string name="activity_detail_voucher_textview_location">Location</string>
    <string name="activity_detail_voucher_textview_notes">Notes</string>


    <string name="activity_new_voucher_edittext_name_hint">add name</string>
    <string name="activity_new_voucher_edittext_receivedAt_hint">add date of receipt</string>
    <string name="activity_new_voucher_edittext_validUntil_hint">add date of expiry</string>
    <string name="activity_new_voucher_edittext_receivedFrom_hint">add received from</string>
    <string name="activity_new_voucher_edittext_location_hint">add location</string>
    <string name="activity_new_voucher_edittext_notes_hint">add notes</string>
    <string name="activity_new_voucher_edittext_givento_hint">add given to</string>
    <string name="activity_new_voucher_edittext_dataOfDelivery_hint">add date of delivery</string>
    <string name="activity_settings_textview_language">Language</string>
    <string name="activity_settings_textview_colors">Actionbar Design</string>
    <string name="activity_settings_textview_thresholdForSoonToExpire">Threshold</string>


    <string name="menu_voucher_detail_delete_item_delete">Delete</string>
    <string name="menu_voucher_detail_popup_item_redeemed">Redeemed</string>
    <string name="menu_voucher_detail_popup_item_expired">Not redeemed</string>

    <string name="menu_main_new_popup_item_newVoucher">New Voucher</string>
    <string name="menu_main_popup_item_settings">Settings</string>
    <string name="menu_main_popup_item_logout">Logout</string>

    <string name="menu_new_voucher_item_cancel">Cancel</string>
    <string name="menu_new_voucher_item_save">Save</string>


    <!-- Dialogs -->
    <string name="dialog_uploading">Uploading...</string>
    <string name="dialog_signup">Signing up...</string>
    <string name="dialog_login">Logging in...</string>
    <string name="dialog_refreshing">Refreshing...</string>
    <string name="dialog_help_actionbar_msg">With this setting you can change the look of the actionbar.</string>
    <string name="dialog_help_threshold_msg">This value defines how many months before a voucher expires, it should be marked as \"soon to expire\" (orange circle in the overview).</string>

    <!-- Feedback -->
    <string name="toast_voucherAdded">Voucher added</string>
    <string name="toast_addVoucherFailure">Failed to add voucher</string>
    <string name="toast_addVoucherCanceled">Canceled new voucher</string>
    <string name="toast_no_connection">Error while talking to the server</string>

    <!-- General String -->
    <string name="general_from">from</string>
    <string name="general_for">for</string>
    <string name="general_empty_from_me_or_for_me_recycler_view">No vouchers available. Click on the \"plus\" sign on the top right to add a new voucher.</string>
    <string name="general_empty_archive_recycler_view">No vouchers archived. Click on the \"archive\" sign in the detail view of a voucher to mark it as archived.</string>
    <string name="general_help">Help</string>

    <string-array name="language_array">
        <item>Deutsch</item>
        <item>English</item>
    </string-array>

</resources>