<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_name"/>

            <EditText
                android:id="@+id/detail_txtVoucherName"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_desc_txtReceivedAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_receivedAt"/>

            <EditText
                android:id="@+id/detail_txtReceivedAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_validUntil"/>

            <EditText
                android:id="@+id/detail_txtValidUntil"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_desc_txtPerson"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_receivedFrom"/>

            <EditText
                android:id="@+id/detail_txtPerson"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_desc_Location"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_location"/>

            <EditText
                android:id="@+id/detail_txtLocation"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"
                android:editable="false"
                android:focusable="false"
                android:inputType="none"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_gravity="top"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_voucher_textview_notes"/>

            <EditText
                android:id="@+id/detail_txtNotes"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="top"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/activity_detail_voucher_textview_defaultHint"/>
        </TableRow>

    </TableLayout>

</LinearLayout>