<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingTop="15dp"
    android:paddingRight="8dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_textview_colors"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:id="@+id/textView"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtActionBarHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_help"
            android:layout_marginLeft="10dp"
            android:textColor="@color/stress_color"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginBottom="10dp"/>

        </LinearLayout>



    <LinearLayout
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#FF666666"
            android:onClick="onColorClicked"
            android:tag="#FF666666" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#FF96AA39"
            android:onClick="onColorClicked"
            android:tag="#FF96AA39" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#ff005d66"
            android:onClick="onColorClicked"
            android:tag="#ff005d66" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#FFF4842D"
            android:onClick="onColorClicked"
            android:tag="#FFF4842D" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#FF3F9FE0"
            android:onClick="onColorClicked"
            android:tag="#FF3F9FE0" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="#FF5161BC"
            android:onClick="onColorClicked"
            android:tag="#FF5161BC" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_textview_thresholdForSoonToExpire"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtThresholdHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_help"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/stress_color"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


<!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibPrevious"
            android:src="@drawable/ic_action_previous_item"
            android:onClick="handlePreviousNumber"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/lblValidityThreshold"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibNext"
            android:src="@drawable/ic_action_next_item"
            android:onClick="handleNextNumber"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/lblValidityThreshold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Medium Text"
            android:id="@+id/lblValidityThreshold"
            android:layout_alignBaseline="@+id/ibNext"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
   -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_gravity="start"
        android:gravity="center_vertical|start"
        android:orientation="horizontal">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_previous_item"
            android:onClick="handlePreviousNumber"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/lblValidityThreshold"
            android:layout_width="40dp"
            android:text="w"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_next_item"
            android:onClick="handleNextNumber"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>


    </LinearLayout>


</LinearLayout>